# curso-pysus

./: Primeiros_Passos.ipynb  README.md  pyproject.toml
DATASUS/: SINAN.ipynb
IBGE/: IBGE.ipynb
Infos/: Infodengue.ipynb  Infogripe.ipynb
