[tool.poetry]
name = "curso-pysus"
version = "0.1.0"
description = "Curso introdutório ao PySUS"
authors = ["Flavio Codeço Coelho <fccoelho@gmail.com>"]
license = "CC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pysus = "^0.10.3"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
